# Daemon

./: .gitignore  CMakeLists.txt  Daemon.c  Daemon.h  Functions.c  Functions.h  Headers.h  Utilites.c  Utilites.h  launch.vs.json
